objects/Nebula__LogEntry__c.object
<CustomObject>
    <fields>
        <fullName>Nebula__ApexClassApiVersion__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>For more details, refer to https://developer.salesforce.com/docs/atlas.en-us.object_reference.meta/object_reference/sforce_api_objects_apexclass.htm</description>
        <inlineHelpText>The API version for this class. Every class has an API version specified at creation.</inlineHelpText>
        <label>Apex Class API Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>v53.0</fullName>
                    <label>v53.0 - Winter &apos;22 Release</label>
                </value>
                <value>
                    <fullName>v52.0</fullName>
                    <label>v52.0 - Summer &apos;21 Release</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__ApexClassCreatedDate__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Apex Class Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Nebula__ApexClassId__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>For more details, refer to https://developer.salesforce.com/docs/atlas.en-us.object_reference.meta/object_reference/sforce_api_objects_apexclass.htm</description>
        <inlineHelpText>The ID of the Apex class in the current org.</inlineHelpText>
        <label>Apex Class ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__ApexClassLastModifiedDate__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Apex Class Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Nebula__ApexClassName__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Apex Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__ApexInnerClassName__c</fullName>
        <complianceGroup>None</complianceGroup>
        <inlineHelpText>When the log entry is created via an Apex inner class, this field is populated with the fully-qualified class name (e.g., MyClass.MyInnerClass)</inlineHelpText>
        <label>Apex Inner Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__ApexMethodName__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Apex Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__ComponentApiName__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Component Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__ComponentFunctionName__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Component Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__ComponentType__c</fullName>
        <complianceGroup>None</complianceGroup>
        <inlineHelpText>Indicates if the component is a lightning web component (lwc) or an aura component</inlineHelpText>
        <label>Component Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aura</fullName>
                </value>
                <value>
                    <fullName>LWC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__DatabaseResultCollectionSize__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>The number of items contained in the collection of database results</description>
        <inlineHelpText>The number of items contained in the collection of database results</inlineHelpText>
        <label>Database Result Collection Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__DatabaseResultCollectionType__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Database Result Collection Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                    <label>Single Record</label>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__DatabaseResultJson__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Database Result JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nebula__DatabaseResultType__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Database Result Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Database.DeleteResult</fullName>
                </value>
                <value>
                    <fullName>Database.MergeResult</fullName>
                </value>
                <value>
                    <fullName>Database.SaveResult</fullName>
                </value>
                <value>
                    <fullName>Database.UpsertResult</fullName>
                </value>
                <value>
                    <fullName>Database.UpsertResult.Insert</fullName>
                </value>
                <value>
                    <fullName>Database.UpsertResult.Update</fullName>
                </value>
                <value>
                    <fullName>Database.UndeleteResult</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__EpochTimestamp__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>Timestamp in milliseconds elapsed since 1 January 1970 of the log event</description>
        <inlineHelpText>Timestamp in milliseconds elapsed since 1 January 1970 of the log event</inlineHelpText>
        <label>Epoch Timestamp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__EventUuid__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>The UUID of the LogEntryEvent__e platform event that created this LogEntry__c record.

For more details, refer to https://developer.salesforce.com/docs/atlas.en-us.platform_events.meta/platform_events/platform_events_event_uuid.htm</description>
        <externalId>true</externalId>
        <inlineHelpText>The UUID of the LogEntryEvent__e platform event that created this LogEntry__c record.

For more details, refer to https://developer.salesforce.com/docs/atlas.en-us.platform_events.meta/platform_events/platform_events_event_uuid.htm</inlineHelpText>
        <label>Event UUID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Nebula__ExceptionMessage__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Exception Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nebula__ExceptionStackTrace__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Exception Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nebula__ExceptionType__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Exception Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flow.FaultError</fullName>
                </value>
                <value>
                    <fullName>JavaScript.Error</fullName>
                </value>
                <value>
                    <fullName>System.AsyncException</fullName>
                </value>
                <value>
                    <fullName>System.CalloutException</fullName>
                </value>
                <value>
                    <fullName>System.DmlException</fullName>
                </value>
                <value>
                    <fullName>System.EmailException</fullName>
                </value>
                <value>
                    <fullName>System.ExternalObjectException</fullName>
                </value>
                <value>
                    <fullName>System.InvalidParameterValueException</fullName>
                </value>
                <value>
                    <fullName>System.JSONException</fullName>
                </value>
                <value>
                    <fullName>System.LimitException</fullName>
                </value>
                <value>
                    <fullName>System.ListException</fullName>
                </value>
                <value>
                    <fullName>System.MathException</fullName>
                </value>
                <value>
                    <fullName>System.NoAccessException</fullName>
                </value>
                <value>
                    <fullName>System.NoDataFoundException</fullName>
                </value>
                <value>
                    <fullName>System.NoSuchElementException</fullName>
                </value>
                <value>
                    <fullName>System.NullPointerException</fullName>
                </value>
                <value>
                    <fullName>System.QueryException</fullName>
                </value>
                <value>
                    <fullName>System.SearchException</fullName>
                </value>
                <value>
                    <fullName>System.SecurityException</fullName>
                </value>
                <value>
                    <fullName>System.SerializationException</fullName>
                </value>
                <value>
                    <fullName>System.SObjectException</fullName>
                </value>
                <value>
                    <fullName>System.StringException</fullName>
                </value>
                <value>
                    <fullName>System.TypeException</fullName>
                </value>
                <value>
                    <fullName>System.VisualforceException</fullName>
                </value>
                <value>
                    <fullName>System.XmlException</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__FlowActiveVersionId__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>The ID of the active flow version.</description>
        <inlineHelpText>The ID of the active flow version.</inlineHelpText>
        <label>Flow Active Version ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__FlowDescription__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>Flow definition information, specified by the org’s admin.</description>
        <inlineHelpText>Flow definition information, specified by the org’s admin.</inlineHelpText>
        <label>Flow Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nebula__FlowDurableId__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>For more details, refer to https://developer.salesforce.com/docs/atlas.en-us.object_reference.meta/object_reference/sforce_api_objects_flowdefinitionview.htm</description>
        <inlineHelpText>The ID of the flow definition.</inlineHelpText>
        <label>Flow Durable ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__FlowLabel__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>For more details, refer to https://developer.salesforce.com/docs/atlas.en-us.object_reference.meta/object_reference/sforce_api_objects_flowdefinitionview.htm</description>
        <inlineHelpText>The label of the flow definition.</inlineHelpText>
        <label>Flow Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__FlowLastModifiedByName__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <description>For more details, refer to https://developer.salesforce.com/docs/atlas.en-us.object_reference.meta/object_reference/sforce_api_objects_flowdefinitionview.htm</description>
        <inlineHelpText>The name of the user who last updated this flow definition.</inlineHelpText>
        <label>Flow Last Modified By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__FlowLastModifiedDate__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <description>For more details, refer to https://developer.salesforce.com/docs/atlas.en-us.object_reference.meta/object_reference/sforce_api_objects_flowdefinitionview.htm</description>
        <label>Flow Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Nebula__FlowProcessType__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>For more details, refer to https://developer.salesforce.com/docs/atlas.en-us.object_reference.meta/object_reference/sforce_api_objects_flowdefinitionview.htm</description>
        <inlineHelpText>The type of the flow.</inlineHelpText>
        <label>Flow Process Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Appointments</fullName>
                </value>
                <value>
                    <fullName>AutoLaunchedFlow</fullName>
                </value>
                <value>
                    <fullName>CheckoutFlow</fullName>
                </value>
                <value>
                    <fullName>ContactRequestFlow</fullName>
                </value>
                <value>
                    <fullName>CustomerLifecycle</fullName>
                </value>
                <value>
                    <fullName>CustomEvent</fullName>
                </value>
                <value>
                    <fullName>FieldServiceMobile</fullName>
                </value>
                <value>
                    <fullName>FieldServiceWeb</fullName>
                </value>
                <value>
                    <fullName>Flow</fullName>
                </value>
                <value>
                    <fullName>FSCLending</fullName>
                </value>
                <value>
                    <fullName>InvocableProcess</fullName>
                </value>
                <value>
                    <fullName>RoutingFlow</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>SurveyEnrich</fullName>
                </value>
                <value>
                    <fullName>Workflow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__FlowTriggerType__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>For more details, refer to https://developer.salesforce.com/docs/atlas.en-us.object_reference.meta/object_reference/sforce_api_objects_flowdefinitionview.htm</description>
        <inlineHelpText>Specifies what causes the flow to run.</inlineHelpText>
        <label>Flow Trigger Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PlatformEvent</fullName>
                </value>
                <value>
                    <fullName>RecordAfterSave</fullName>
                </value>
                <value>
                    <fullName>RecordBeforeSave</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__FlowVersionApiVersionRuntime__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>For more details, refer to https://developer.salesforce.com/docs/atlas.en-us.object_reference.meta/object_reference/sforce_api_objects_flowdefinitionview.htm</description>
        <inlineHelpText>The API version for running the flow. This value determines which versioned run-time behavior improvements are adopted by the flow version.</inlineHelpText>
        <label>Flow API Version Runtime</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>v53.0</fullName>
                    <label>v53.0 - Winter &apos;22 Release</label>
                </value>
                <value>
                    <fullName>v52.0</fullName>
                    <label>v52.0 - Summer &apos;21 Release</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__FlowVersionNumber__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>For more details, refer to https://developer.salesforce.com/docs/atlas.en-us.object_reference.meta/object_reference/sforce_api_objects_flowdefinitionview.htm</description>
        <inlineHelpText>The flow’s version number.</inlineHelpText>
        <label>Flow Version Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__FlowVersionRunInMode__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>For more details, refer to https://developer.salesforce.com/docs/atlas.en-us.object_reference.meta/object_reference/sforce_api_objects_flowdefinitionview.htm</description>
        <inlineHelpText>The mode that the flow runs in.</inlineHelpText>
        <label>Flow Run-In Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DefaultMode</fullName>
                </value>
                <value>
                    <fullName>SystemModeWithSharing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__HasDatabaseResult__c</fullName>
        <complianceGroup>None</complianceGroup>
        <formula>NOT(ISBLANK(TEXT(Nebula__DatabaseResultType__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Database Result</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__HasExceptionStackTrace__c</fullName>
        <complianceGroup>None</complianceGroup>
        <defaultValue>false</defaultValue>
        <label>Has Exception Stack Trace</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__HasException__c</fullName>
        <complianceGroup>None</complianceGroup>
        <formula>NOT(ISBLANK(TEXT(Nebula__ExceptionType__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__HasRecordId__c</fullName>
        <complianceGroup>None</complianceGroup>
        <formula>Nebula__RecordId__c != null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Related Record ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__HasRecordJson__c</fullName>
        <complianceGroup>None</complianceGroup>
        <defaultValue>false</defaultValue>
        <label>Has Related Record JSON</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__HasStackTrace__c</fullName>
        <complianceGroup>None</complianceGroup>
        <defaultValue>false</defaultValue>
        <label>Has Stack Trace</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__HttpRequestBodyMasked__c</fullName>
        <complianceGroup>None</complianceGroup>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if sensitive data was removed from the HTTP Request Body, using log entry data mask rules</inlineHelpText>
        <label>HTTP Request Body Masked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__HttpRequestBody__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>HTTP Request Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nebula__HttpRequestCompressed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <defaultValue>false</defaultValue>
        <label>HTTP Request Compressed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__HttpRequestEndpoint__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>HTTP Request Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__HttpRequestMethod__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>HTTP Request Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DELETE</fullName>
                </value>
                <value>
                    <fullName>GET</fullName>
                </value>
                <value>
                    <fullName>HEAD</fullName>
                </value>
                <value>
                    <fullName>PATCH</fullName>
                </value>
                <value>
                    <fullName>POST</fullName>
                </value>
                <value>
                    <fullName>PUT</fullName>
                </value>
                <value>
                    <fullName>TRACE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__HttpResponseBodyMasked__c</fullName>
        <complianceGroup>None</complianceGroup>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if sensitive data was removed from the HTTP Response Body, using log entry data mask rules</inlineHelpText>
        <label>HTTP Response Body Masked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__HttpResponseBody__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>HTTP Response Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nebula__HttpResponseHeaderKeys__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>HTTP Response Header Keys</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nebula__HttpResponseStatusCode__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>HTTP Response Status Code</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__HttpResponseStatus__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>HTTP Response Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsAggregateQueriesMax__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Aggregate Queries Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsAggregateQueriesUsed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Aggregate Queries Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsAggregateQueries__c</fullName>
        <complianceGroup>None</complianceGroup>
        <formula>TEXT(Nebula__LimitsAggregateQueriesUsed__c ) + &apos; / &apos; + TEXT(Nebula__LimitsAggregateQueriesMax__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aggregate Queries</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsAsyncCallsMax__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Async Calls Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsAsyncCallsUsed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Async Calls Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsAsyncCalls__c</fullName>
        <complianceGroup>None</complianceGroup>
        <formula>TEXT(Nebula__LimitsAsyncCallsUsed__c) + &apos; / &apos; + TEXT(Nebula__LimitsAsyncCallsMax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Async Calls</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsCalloutsMax__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Callouts Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsCalloutsUsed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Callouts Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsCallouts__c</fullName>
        <complianceGroup>None</complianceGroup>
        <formula>TEXT(Nebula__LimitsCalloutsUsed__c ) + &apos; / &apos; + TEXT(Nebula__LimitsCalloutsMax__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Callouts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsCpuTimeMax__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>CPU Time Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsCpuTimeUsed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>CPU Time Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsCpuTime__c</fullName>
        <complianceGroup>None</complianceGroup>
        <formula>TEXT(Nebula__LimitsCpuTimeUsed__c) + &apos; / &apos; + TEXT(Nebula__LimitsCpuTimeMax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPU Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsDmlRowsMax__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>DML Rows Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsDmlRowsUsed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>DML Rows Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsDmlRows__c</fullName>
        <complianceGroup>None</complianceGroup>
        <formula>TEXT(Nebula__LimitsDmlRowsUsed__c) + &apos; / &apos; + TEXT(Nebula__LimitsDmlRowsMax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DML Rows</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsDmlStatementsMax__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>DML Statements Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsDmlStatementsUsed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>DML Statements Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsDmlStatements__c</fullName>
        <complianceGroup>None</complianceGroup>
        <formula>TEXT(Nebula__LimitsDmlStatementsUsed__c ) + &apos; / &apos; + TEXT(Nebula__LimitsDmlStatementsMax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DML Statements</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsEmailInvocationsMax__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Email Invocations Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsEmailInvocationsUsed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Email Invocations Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsEmailInvocations__c</fullName>
        <complianceGroup>None</complianceGroup>
        <formula>TEXT(Nebula__LimitsEmailInvocationsUsed__c) + &apos; / &apos; + TEXT(Nebula__LimitsEmailInvocationsMax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Invocations</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsFutureCallsMax__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Future Calls Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsFutureCallsUsed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Future Calls Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsFutureCalls__c</fullName>
        <complianceGroup>None</complianceGroup>
        <formula>TEXT(Nebula__LimitsFutureCallsUsed__c ) + &apos; / &apos; + TEXT(Nebula__LimitsFutureCallsMax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Future Calls</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsHeapSizeMax__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Heap Size Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsHeapSizeUsed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Heap Size Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsHeapSize__c</fullName>
        <complianceGroup>None</complianceGroup>
        <formula>TEXT(Nebula__LimitsHeapSizeUsed__c) + &apos; / &apos; + TEXT(Nebula__LimitsHeapSizeMax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Heap Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsMobilePushApexCallsMax__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Mobile Push Apex Calls Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsMobilePushApexCallsUsed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Mobile Push Apex Calls Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsMobilePushApexCalls__c</fullName>
        <complianceGroup>None</complianceGroup>
        <formula>TEXT(Nebula__LimitsMobilePushApexCallsUsed__c) + &apos; / &apos; + TEXT(Nebula__LimitsMobilePushApexCallsMax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile Push Apex Calls</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsPublishImmediateDmlStatementsMax__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Publish Immediate Statements DML Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsPublishImmediateDmlStatementsUsed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Publish Immediate Statements DML Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsPublishImmediateDmlStatements__c</fullName>
        <complianceGroup>None</complianceGroup>
        <formula>TEXT(Nebula__LimitsPublishImmediateDmlStatementsUsed__c) + &apos; / &apos; + TEXT(Nebula__LimitsPublishImmediateDmlStatementsMax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Publish Immediate DML Statements</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsQueueableJobsMax__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Queueable Jobs Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsQueueableJobsUsed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Queueable Jobs Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>